added in swagger models and operations
