# docs/user_api.go
@@ -1,13 +1,0 @@
-package docs
-
-import (
-	"Automate-Go-Backend/models"
-)
-
-type UserModel struct {
-	Body models.User
-}
-
-type Auth0User struct {
-	Body models.Auth0User
-}
