# swagger.yml
@@ -1,11 +1,214 @@
-consumes:
-    - application/json
-info:
-    title: Automate Go Backend
-    version: 0.1.0
-paths: {}
-produces:
-    - application/json
-schemes:
-    - http
+definitions:
+    Auth0User:
+        properties:
+            _id:
+                type: string
+                x-go-name: ID
+            client_id:
+                type: string
+                x-go-name: ClientId
+            connection:
+                type: string
+                x-go-name: Connection
+            email:
+                type: string
+                x-go-name: Email
+            family_name:
+                type: string
+                x-go-name: FamilyName
+            given_name:
+                type: string
+                x-go-name: GivenName
+            name:
+                type: string
+                x-go-name: Name
+            password:
+                type: string
+                x-go-name: Password
+            tenant:
+                type: string
+                x-go-name: Tenant
+            user_metadata:
+                $ref: '#/definitions/UserMetaData'
+        type: object
+        x-go-package: Automate-Go-Backend/models
+    Auth0UserChangePassword:
+        properties:
+            client_id:
+                type: string
+                x-go-name: ClientId
+            connection:
+                type: string
+                x-go-name: Connection
+            username:
+                type: string
+                x-go-name: Email
+        type: object
+        x-go-package: Automate-Go-Backend/models
+    Auth0UserLogin:
+        properties:
+            audience:
+                type: string
+                x-go-name: Audience
+            client_id:
+                type: string
+                x-go-name: ClientId
+            client_secret:
+                type: string
+                x-go-name: ClientSecret
+            grant_type:
+                type: string
+                x-go-name: GrantType
+            password:
+                type: string
+                x-go-name: Password
+            realm:
+                type: string
+                x-go-name: Realm
+            scope:
+                type: string
+                x-go-name: Scope
+            username:
+                type: string
+                x-go-name: Email
+        type: object
+        x-go-package: Automate-Go-Backend/models
+    ChangePasswordPayload:
+        properties:
+            email:
+                type: string
+                x-go-name: Email
+        type: object
+        x-go-package: Automate-Go-Backend/models
+    EditUserPayload:
+        properties:
+            date_of_birth:
+                type: string
+                x-go-name: DateOfBirth
+            first_name:
+                type: string
+                x-go-name: FirstName
+            last_name:
+                type: string
+                x-go-name: LastName
+            name:
+                type: string
+                x-go-name: Name
+            phone:
+                type: string
+                x-go-name: Phone
+            photo_file_url:
+                type: string
+                x-go-name: PhotoFileUrl
+            services:
+                type: string
+                x-go-name: Services
+        type: object
+        x-go-package: Automate-Go-Backend/models
+    GetAuth0UserFieldsPayload:
+        properties:
+            access_token:
+                type: string
+                x-go-name: AccessToken
+        type: object
+        x-go-package: Automate-Go-Backend/models
+    LoginPayload:
+        properties:
+            email:
+                type: string
+                x-go-name: Email
+            password:
+                type: string
+                x-go-name: Password
+        type: object
+        x-go-package: Automate-Go-Backend/models
+    SignUpPayload:
+        properties:
+            date_of_birth:
+                type: string
+                x-go-name: DateOfBirth
+            email:
+                type: string
+                x-go-name: Email
+            first_name:
+                type: string
+                x-go-name: FirstName
+            last_name:
+                type: string
+                x-go-name: LastName
+            name:
+                type: string
+                x-go-name: Name
+            password:
+                type: string
+                x-go-name: Password
+            phone:
+                type: string
+                x-go-name: Phone
+            photo_file_url:
+                type: string
+                x-go-name: PhotoFileUrl
+            services:
+                type: string
+                x-go-name: Services
+        type: object
+        x-go-package: Automate-Go-Backend/models
+    UserMetaData:
+        properties:
+            date_of_birth:
+                type: string
+                x-go-name: DateOfBirth
+            phone:
+                type: string
+                x-go-name: Phone
+            photo_file_url:
+                type: string
+                x-go-name: PhotoFileUrl
+            services:
+                type: string
+                x-go-name: Services
+        type: object
+        x-go-package: Automate-Go-Backend/models
+paths:
+    /GetUser:
+        get:
+            description: This endpoint returns a user object.
+            operationId: GetUser
+            produces:
+                - application/json
+            summary: Get a user.
+            tags:
+                - user
+    /changePassword:
+        post:
+            description: This endpoint returns a confirmation message.
+            operationId: user
+            produces:
+                - application/json
+            summary: changePassword endpoint
+    /login:
+        post:
+            description: This endpoint returns a confirmation message.
+            operationId: Login
+            produces:
+                - application/json
+            summary: Login in endpoint
+            tags:
+                - user
+    /signUp:
+        post:
+            description: This endpoint returns a confirmation message.
+            operationId: signUp
+            produces:
+                - application/json
+            summary: Sign up endpoint
+            tags:
+                - user
+    /updateUser:
+        post:
+            description: This endpoint returns a confirmation message.
+            operationId: user
+            produces:
+                - application/json
+            summary: update User endpoint
 swagger: "2.0"
